# url_shortner

./: .gitignore  API.http  Cargo.toml  Readme.md  appspec.yml  sqlx-data.json
.github/workflows/: main.yml
migrations/: 20221106065048_initial.sql  20221106142403_initial.down.sql  20221106142403_initial.up.sql
scripts/: runapp.sh  stopapp.sh
src/: api.rs  asset.rs  db.rs  logging.rs  main.rs  setup.rs
