[package]
name = "rust_url_shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15.6"

# Tracing and error
color-eyre = "0.6.2"
tracing = "0.1.26"
tracing-subscriber = "0.3.16"



[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite"]