[package]
name = "rust_url_shortner"
version = "0.1.0"
edition = "2021"

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
actix-web = "4"
dotenvy = "0.15.6"
serde = {version = "1", features = ["derive"] }

# Tracing and error
color-eyre = "0.6.2"
tracing = "0.1.26"
tracing-subscriber = "0.3.16"



[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite"]