[package]
name = "rust_url_shortner"
version = "0.1.0"
edition = "2021"

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
dotenvy = "0.15.6"
serde = {version = "1", features = ["derive"] }

# Tracing and error
color-eyre = "0.6.2"
tracing = "0.1.26"
tracing-subscriber = "0.3.16"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "offline"]